--- a/ajaxStudy/src/main/webapp/test0421/test1_A.html
+++ b/ajaxStudy/src/main/webapp/test0421/test1_A.html
@@ -26,8 +26,8 @@ function callBack() {
 			  if(min > nums[i]) min = nums[i]
 		  }
 		  document.querySelector("#result").innerHTML = 
-	  "<strong> ["+this.responseText  +"]중 최대값:"+max+"<br>["
-	   + this.responseText  +"]중 최소값:"+min+"</strong>"
+	  "<strong> ["+xhttp.responseText  +"]중 최대값:"+max+"<br>["
+	   + xhttp.responseText  +"]중 최소값:"+min+"</strong>"
 	  }
 }
 </script>
